Fix regression introduced in QFileSystemEntry::path()

When fd2eb070128ab6ef6b5c9343a0921f6b5a0bc041 was backported it
shouldn't have included the change to path() as this introduced
a behaviour change.  This reverts that part of the patch so it
is back to Qt 4.8.2 behavior.

Task-number: QTBUG-27356

Change-Id: I7c19dda473e7aa2c53baed961c3b0e0d322362fe
Reviewed-by: João Abecasis <joao@abecasis.name>